<resources>
    <string name="app_name">ProjetoImobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_imovel">Imovel</string>
    <string name="menu_corretor">Corretor</string>
    <string name="menu_locatario">Locatarios</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
<<<<<<< HEAD
    <string name="menu_send">Send</string>

    //Add strings personalizadas
    <string name="lbCadastroImovel">Cadastro de Imovel</string>
    <string name="lbCadastroLocatario">Cadastro de Locatarios</string>
    <string name="lbCadastroCorretor">Cadastro de Corretor</string>
=======
    <string name="menu_remove">Restaurar APP</string>
    <string name="title_activity_corretor">CorretorActivity</string>
    <string name="title_activity_locatario">LocatarioActivity</string>
    <string name="title_activity_imovel">ImovelActivity</string>
    <string name="lbSalvar">Salvar</string>
    <string name="lbCancelar">Cancelar</string>
    <string name="lbDescricao">Descrição</string>
    <string name="lbTamanho">Tamanho</string>
    <string name="lbVVenda">Valor de Venda</string>
    <string name="lbVAluguel">Valor de Aluguel</string>
    <string name="lbLocatario">Locatario</string>
    <string name="lbCorretor">Corretor</string>
    <string name="lbSpinnerCorretor">Corretor:</string>
    <string name="lbSpinnerLocatario">Locatario:</string>
    <string name="lbImovel">Cadastro de Imóvel</string>
    <string name="lbCadEndereco">Cadastro de Endereço</string>
    <string name="lbEndereco">Endereço</string>
    <string name="lbCodigo">Código</string>
    <string name="lbCadCorretor">Cadastro de Corretor</string>
    <string name="lbCadLocatario">Cadastro de Locatário</string>
    <string name="lbImoveis">Imóveis</string>
    <string name="lbNome">Nome</string>
    <string name="lbTelefone">Telefone</string>
    <string name="lbCreci">CRECI</string>
    <string name="lbCidade">Cidade</string>
    <string name="lbRua">Rua</string>
    <string name="lbEstado">Estado</string>
    <string name="lbNumero">Numero</string>
    <string name="lbCEP">CEP</string>
    <string name="lbOk">Ok</string>
    <string name="lbEditarImovel">Alugar</string>
    <string name="lbListaImovel">Lista de Ímoveis</string>
    <string name="title_activity_endereco">EnderecoActivity</string>


>>>>>>> 644556376731011d901a33232be7018d92706d34
</resources>
