<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cadastro_imovel"
            android:icon="@drawable/ic_house"
            android:title="@string/lbCadastroImovel" />
        <item
            android:id="@+id/nav_cadastro_locatario"
            android:icon="@drawable/ic_add_person"
            android:title="@string/lbCadastroCorretor" />
        <item
            android:id="@+id/nav_cadastro_corretor"
            android:icon="@drawable/ic_add_person_2"
            android:title="@string/lbCadastroLocatario" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
