<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EnderecoActivity"
    tools:showIn="@layout/activity_endereco">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_size"
        android:background="@drawable/borda_arredondada"
        android:gravity="center"
        android:text="@string/lbEndereco"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:hint="@string/lbCidade"
        android:textSize="@dimen/text_sizeComponents" />

    <EditText
        android:id="@+id/etEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:hint="@string/lbEstado"
        android:textSize="@dimen/text_sizeComponents" />

    <EditText
        android:id="@+id/etRua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:hint="@string/lbRua"
        android:textSize="@dimen/text_sizeComponents" />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:hint="@string/lbNumero"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="@dimen/text_sizeComponents" />

    <EditText
        android:id="@+id/etCEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:hint="@string/lbCEP"
        android:inputType="number"
        android:textSize="@dimen/text_sizeComponents" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:hint="@string/lbSalvar"
            android:textColorHint="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:hint="@string/lbCancelar"
            android:textColorHint="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>